--- a/assignment.html
+++ b/assignment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">
+        <div class=Logo">
         <h1>agrivista Farms</h1>
     </div>
         <ul>
@@ -43,7 +43,7 @@
         <div class="box"><p>Since 1996</p></div>
     </div>
  </div>
-    <section class="services">
+    <section class="Services">
         <h1>Our Services</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores veritatis. Odio inventore alias voluptatum sit? Eligendi doloribus, voluptatum et, optio placeat temporibus corporis amet velit unde magni, quos ab.</p>
         <div class="service-cards">
