--- a/assignment.html
+++ b/assignment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class=Logo">
+        <div class="Logo">
         <h1>agrivista Farms</h1>
     </div>
         <ul>
