--- a/assignment.html
+++ b/assignment.html
@@ -34,7 +34,7 @@
  <div class="about">
     <div class="text">
         <h1>Our Passion for Agriculture Nurturing Growth and Sustaining the Future.</h1> <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt autem iste vero esse animi ab assumenda quae accusamus accusantium nulla?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt autem iste vero esse animi ab assumenda quae accusamus accusantium nulla!</p>
         <button class="btnn">Get Started</button>
        
     </div>
