--- a/assignment.html
+++ b/assignment.html
@@ -56,7 +56,7 @@
                 <h3>Website Content</h3>
             </div>
             <div class="content">
-                <i class="fa-solid fa-user"></i> <br><br>
+                <i id="contect" class="fa-solid fa-user"></i> <br><br>
                 <h3>Content Strategy and Consulting</h3>
             </div>
             <div class="social">
