--- a/assignment.html
+++ b/assignment.html
@@ -52,7 +52,7 @@
                 <h3>Blog and Article Writing</h3>
             </div>
             <div class="Website">
-                <i class="fa-brands fa-github"></i><br><br>
+                <i id="website" class="fa-brands fa-github"></i><br><br>
                 <h3>Website Content</h3>
             </div>
             <div class="content">
