--- a/assignment.html
+++ b/assignment.html
@@ -48,7 +48,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores veritatis. Odio inventore alias voluptatum sit? Eligendi doloribus, voluptatum et, optio placeat temporibus corporis amet velit unde magni, quos ab.</p>
         <div class="service-cards">
             <div class="service-car">
-                <i class="fa-solid fa-newspaper"></i><br><br>
+                <i id="service-card" class="fa-solid fa-newspaper"></i><br><br>
                 <h3>Blog and Article Writing</h3>
             </div>
             <div class="Website">
@@ -60,7 +60,7 @@
                 <h3>Content Strategy and Consulting</h3>
             </div>
             <div class="social">
-                <i class="fa-solid fa-bell"></i><br><br>
+                <i id="social" class="fa-solid fa-bell"></i><br><br>
             
             <h3>Social Media Management</h3></div>
            
