--- a/assignment.html
+++ b/assignment.html
@@ -44,7 +44,7 @@
     </div>
  </div>
     <section class="Services">
-        <h1>Our Servi</h1>
+        <h1>Our Servic</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores veritatis. Odio inventore alias voluptatum sit? Eligendi doloribus, voluptatum et, optio placeat temporibus corporis amet velit unde magni, quos ab.</p>
         <div class="service-cards">
             <div class="service-car">
