--- a/assignment.html
+++ b/assignment.html
@@ -33,7 +33,7 @@
     <!-- about -->
  <div class="about">
     <div class="text">
-        <h1>O passion for Agriculture Nurturing Growth and Sustaining The Future.</h1> <br>
+        <h1>Ou passion for Agriculture Nurturing Growth and Sustaining The Future.</h1> <br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt autem iste vero esse animi ab assumenda quae accusamus accusantium nulla!</p>
         <button class="btnn">Get Started</button>
        
