--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="Logo">
-        <h1>agrivista Farms</h1>
+        <h1>agrivista Farm</h1>
     </div>
         <ul>
             <li>Home</li>
