--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@
            
         </div>
     </section>
+    <!--section3-->
+    <div class="products">
+        <h1>Our</h1>
+    </div>
 </body>
 </html>
