--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <!--section3-->
     <div class="products">
-        <h1>Our</h1>
+        <h1>Our Featured</h1>
     </div>
 </body>
 </html>
