--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <!--section3-->
     <div class="products">
         <h1>Our Featured Product</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, optio similique! Cum itaque mollitia et.</p>
     </div>
 </body>
 </html>
