--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
     <div class="products">
         <h1>Our Featured Product</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, optio similique! Cum itaque mollitia et.</p>
+        <div class="boxes">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box1"></div>
+        </div>
     </div>
 </body>
 </html>
