--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="box1"></div>
             <div class="box2"></div>
             <div class="box3"></div>
-            <div class="box"></div>
+            <div class="box4"></div>
         </div>
     </div>
 </body>
