--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
         <h1>Our Featured Product</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, optio similique! Cum itaque mollitia et.</p>
         <div class="boxes">
-            <div class="box1"></div>
+            <div class="box1">
+                <img src="rice.png" alt="">
+                <h2>Rice</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
+            </div>
             <div class="box2"></div>
             <div class="box3"></div>
             <div class="box4"></div>
