--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
                 <h2>Rice</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
-            <div class="box2"></div>
-            <div class="box3"></div>
+            <div class="box2">
+                <img src="Rectangle 12.png" alt="">
+                <h2>Wheat</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
+            </div>
+            <div class="box3">
+                <img src=png" alt="">
+                <h2>Pumpkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
+            </div>
             <div class="box4"></div>
         </div>
     </div>
