--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box3">
-                <img src=" alt="">
+                <img src="" alt="">
                 <h2>Pumpkin</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
