--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                 <h2>Pumpkin</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
-            <div class="box4"></div>
+            <div class="box4">
+                <img src="rice.png" alt="">
+                <h2>Rice</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
+            </div>
         </div>
     </div>
 </body>
