--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="box4">
                 <img src="rice.png" alt="">
-                <h2>Rice</h2>
+                <h2>Cabbage</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
         </div>
