--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box4">
-                <img src="rice.png" alt="">
+                <img src="" alt="">
                 <h2>Cabbage</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
