--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
         </div>
-        <p><a href="">See all products</a></p>
+        <p><a href="https://www.amazon.com/products/s?k=products">See all products</a></p>
     </div>
 </body>
 </html>
