--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
             </div>
             <div class="box2">
                 <img src="Rectangle 12.png" alt="">
-                <h2>Wheat</h2>
+                <h2>Whea</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box3">
-                <img src="Rectangle 13.png" alt="">
+                <img src="Rectangle 12 (1).png" alt="">
                 <h2>Pumpkin</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box4">
-                <img src="Rectangle 12.png" alt="">
+                <img src="Rectangle 13.png" alt="">
                 <h2>Cabbage</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
