--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="boxes">
             <div class="box1">
                 <img src="rice.png" alt="">
-                <h2>Ric</h2>
+                <h2>Rice</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box2">
