--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="box3">
                 <img src="Rectangle 12 (1).png" alt="">
-                <h2>Pum</h2>
+                <h2>Pump</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
             <div class="box4">
