--- a/index.html
+++ b/index.html
@@ -95,5 +95,10 @@
         <div class="link">
         <p><a href="https://www.amazon.com/products/s?k=products">See all products</a></p>
     </div>
+</div>
+<!--section4-->
+<div class="sustainable">
+    <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
+</div>
 </body>
 </html>
