--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </div>
 <!--section4-->
 <div class="sustainable">
-    <h1>Sustainable Farming Meets Technology: Building a Greener </h1>
+    <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
 </div>
 </body>
 </html>
