--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <!--section4-->
 <div class="sustainable">
     <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
-    <button class="btn-get">Get Start</button>
-    <button class="btn-learn">Learn More</button>
+    <button class="btn-learnmore">Learn More</button>
+    <button class="btn-contact">Contact Us</button>
 </div>
 </body>
 </html>
