--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div class="sustainable">
     <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
     <button class="btn-learnmore">Learn More</button>
-    <button class="btn-contact">C</button>
+    <button class="btn-contact"></button>
 </div>
 </body>
 </html>
