--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <!--section4-->
 <div class="sustainable">
     <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
-    <button class="btn-learnmore">Lear</button>
+    <button class="btn-learnmore">Learn</button>
     <button class="btn-contact">Contact Us</button>
 </div>
 </body>
