--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="box4">
                 <img src="Rectangle 13.png" alt="">
-                <h2>Cabbag</h2>
+                <h2>Cabba</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.</p>
             </div>
         </div>
