--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="box4">
                 <img src="Rectangle 13.png" alt="">
                 <h2>Cabbage</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi......</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, commodi.......</p>
             </div>
         </div>
         <div class="link">
