--- a/index.html
+++ b/index.html
@@ -102,5 +102,10 @@
     <button class="btn-learnmore">Learn More </button>
     <button class="btn-contact">Contact Us</button>
 </div>
+<!--section5-->
+<div class="qoraal">
+    <div class="text"></div>
+    <div class="boxxx"></div>
+</div>
 </body>
 </html>
