--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 </div>
 <!--section5-->
 <div class="qoraal">
-    <div class="text"></div>
+    <div class="text">
+        <h1></h1>
+    </div>
     <div class="boxxx"></div>
 </div>
 </body>
