--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <!--section5-->
 <div class="qoraal">
     <div class="text">
-        <h1>The B</h1>
+        <h1>The Be</h1>
     </div>
     <div class="boxxx"></div>
 </div>
