--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <div class="text">
         <h1>The Benefits of Choosing our expertise</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi dolore numquam laboriosam quasi tempore culpa repellat, atque, architecto eveniet ullam nulla eos sed aliquam illum.</p>
+   <button></button>
     </div>
     <div class="boxxx"></div>
 </div>
