--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi dolore numquam laboriosam quasi tempore culpa repellat, atque, architecto eveniet ullam nulla eos sed aliquam illum.</p>
    <button id="learn">Learn More <i class="fa-solid fa-arrow-right"></i></button>
     </div>
-    <div class="boxxx"></div>
+    <div class="boxxx">
+        <img src="" alt="">
+    </div>
 </div>
 </body>
 </html>
