--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
    <button id="learn">Learn More <i class="fa-solid fa-arrow-right"></i></button>
     </div>
     <div class="boxxx">
-        <img src="" alt="">
+        <img src="star_rate.png" alt="">
     </div>
 </div>
 </body>
