--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <img src="star_rate.png" alt="">
         <div class="qorl">
             <h1>15+</h1>
+            <h3>Years Of Experience</h3>
         </div>
     </div>
     </div>
