--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
             <h4>Years Of Experience</h4>
         </div>
     </div>
+    <div class="product">
+        <img src="" alt="">
+    </div>
     </div>
 </div>
 </body>
