--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="product">
-        <img src="" alt="">
+        <img src="Product.png" alt="">
     </div>
     </div>
 </div>
