--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     </div>
     <div class="product">
         <img src="Product.png" alt="">
+        <div class="qorl">
+            <h1>40+</h1>
+            <h4>Product</h4>
+        </div>
     </div>
     </div>
 </div>
