--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
             <h4>Product</h4>
         </div>
     </div>
+    <div class="check">
+        <img src="Product.png" alt="">
+        <div class="qorl">
+            <h1>40+</h1>
+            <h4>Product</h4>
+        </div>
+    </div>
     </div>
 </div>
 </body>
