--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
         <img src="Product.png" alt="">
         <div class="qorl">
             <h1>40+</h1>
-            <h4>Product</h4>
+            <p>Product</p>
         </div>
     </div>
     <div class="check">
-        <img src="Product.png" alt="">
+        <img src="check.png" alt="">
         <div class="qorl">
-            <h1>40+</h1>
-            <h4>Product</h4>
+            <h1>2458+</h1>
+            <p>Satisfied Clients</p>
         </div>
     </div>
     </div>
