--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <img src="star_rate.png" alt="">
         <div class="qorl">
             <h1>15+</h1>
-            <h4>Years Of Experience</h4>
+            <p>Years Of Experience</p>
         </div>
     </div>
     <div class="product">
