--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
             <p>Satisfied Clients</p>
         </div>
     </div>
+    <div class="team">
+        <img src="check.png" alt="">
+        <div class="qorl">
+            <h1>2458+</h1>
+            <p>Satisfied Clients</p>
+        </div>
+    </div>
     </div>
 </div>
 </body>
