--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
     </div>
     <div class="team">
-        <img src="check.png" alt="">
+        <img src="Local team.png" alt="">
         <div class="qorl">
             <h1>2458+</h1>
             <p>Satisfied Clients</p>
