--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <div class="team">
         <img src="Local team.png" alt="">
         <div class="qorl">
-            <h1>2458+</h1>
-            <p>Satisfied Clients</p>
+            <h1>20</h1>
+            <p>Local Team Members</p>
         </div>
     </div>
     </div>
