--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <img src="Local team.png" alt="">
         <div class="qorl">
             <h1>20</h1>
-            <p>Local Team Members..</p>
+            <p>Local Team Members./.</p>
         </div>
     </div>
     </div>
