--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
     </div>
     </div>
 </div>
-<section6>
+<!--section6-->
+<div class="section6">
     <h1></h1>
-</section6>
+
+</div>
 </body>
 </html>
