--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="header">
         <div class="Logo">
-        <h1>a
-            Agrivista Farms</h1>
+        <h1>Agrivista Farms</h1>
     </div>
         <ul>
             <li>Home</li>
