fixed section sustainable

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <div class="box"><p>Since 1996</p></div>
     </div>
  </div>
+ <!-- section services -->
     <section class="Services">
-        <h1>Our Services</h11>
+        <h1>Our Services</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, asperiores veritatis. Odio inventore alias voluptatum sit? Eligendi doloribus, voluptatum et, optio placeat temporibus corporis amet velit unde magni, quos ab.</p>
         <div class="service-cards">
             <div class="service-car">
@@ -66,7 +67,7 @@
            
         </div>
     </section>
-    <!--section3-->
+    <!--section products-->
     <div class="products">
         <h1>Our Featured Product</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, optio similique! Cum itaque mollitia et.</p>
@@ -96,7 +97,7 @@
         <p><a href="https://www.amazon.com/products/s?k=products">See all products</a></p>
     </div>
 </div>
-<!--section4-->
+<!--section sustainable-->
 <div class="sustainable">
     <h1>Sustainable Farming Meets Technology: Building a Greener Future</h1>
     <button class="btn-learnmore">Learn More </button>
