--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>The Benefits of Choosing our expertise</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi dolore numquam laboriosam quasi tempore culpa repellat, atque, architecto eveniet ullam nulla eos sed aliquam illum.</p>
    <button id="learn">Learn More <i class="fa-solid fa-arrow-right"></i></button>
-    </div>''/
+    </div>''//
     <div class="boxxx"><div class="star">
         <img src="star_rate.png" alt="">
         <div class="qorl">
