--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <!--section5-->
 <div class="qoraal">
     <div class="text">
-        <h1>The Benefits of Choosing our expertise</h1>
+        <h1>The Benefits of Choosing our Expertise</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi dolore numquam laboriosam quasi tempore culpa repellat, atque, architecto eveniet ullam nulla eos sed aliquam illum.</p>
    <button id="learn">Learn More <i class="fa-solid fa-arrow-right"></i></button>
     </div>
